Dockerfile configured. Jacoco added